--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -4,7 +4,7 @@
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/4/n12731760.md#1" target="_blank"><img width="250" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg" align ="left"></a><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/4/n12731760.md#1" target="_blank">南昌安义县小区封闭管理 网吧KTV停止营业</a><br></h3>最近，江西南昌安义县发公告，要求2月3日起，各小区封闭管理；喜事缓......<br><img align="bottom" src="https://raw.githubusercontent.com/yrsmsb310/www/master/t/ntdtv/time.gif">02月04日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/4/n12732715.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2019/01/GettyImages-461937776-320x200.jpg" align ="left"></a><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/4/n12732715.md#1" target="_blank">任正非为女儿姚安娜公权私用 道歉引热议</a><br></h3>2月3日晚，华为始创人任正非因为“道歉”登上热搜榜——任正非在华为......<br><img align="bottom" src="https://raw.githubusercontent.com/yrsmsb310/www/master/t/ntdtv/time.gif">02月04日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/4/n12732660.md#1" target="_blank"><img width="250" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg" align ="left"></a><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/4/n12732660.md#1" target="_blank">贾平凹之女“诗作”上热搜 网民指其为靠爸族</a><br></h3>日前，中共作协副主席贾平凹之女贾浅浅在大陆网络上“爆红”。原因是她......<br><img align="bottom" src="https://raw.githubusercontent.com/yrsmsb310/www/master/t/ntdtv/time.gif">02月04日</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/4/n12732652.md#1" target="_blank"><img width="250" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg" align ="left"></a><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/4/n12732652.md#1" target="_blank">沈阳延迟公布染疫者死讯 儿子公开信为母叫屈</a><br></h3>2月4日，沈阳官方延迟4天公布了本次疫情的首位确诊患者尹某某去世消......<br><img align="bottom" src="https://raw.githubusercontent.com/yrsmsb310/www/master/t/ntdtv/time.gif">02月04日</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/4/n12732652.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/02/Screen-Shot-2021-02-04-at-8.59.31-pm-1-320x200.png" align ="left"></a><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/4/n12732652.md#1" target="_blank">沈阳延迟公布染疫者死讯 儿子公开信为母叫屈</a><br></h3>2月4日，沈阳官方延迟4天公布了本次疫情的首位确诊患者尹某某去世消......<br><img align="bottom" src="https://raw.githubusercontent.com/yrsmsb310/www/master/t/ntdtv/time.gif">02月04日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/4/n12732497.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2019/06/GettyImages-1052438186-320x200.jpg" align ="left"></a><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/4/n12732497.md#1" target="_blank">逾3300只个股下跌  A股三大股指齐跌</a><br></h3>2月4日，大陆沪指、深成指、创业板三大股指齐跌，沪深两市3300只......<br><img align="bottom" src="https://raw.githubusercontent.com/yrsmsb310/www/master/t/ntdtv/time.gif">02月04日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/4/n12732370.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/02/3314-4-320x200.jpg" align ="left"></a><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/4/n12732370.md#1" target="_blank">受贿三千万 内蒙巴彦淖尔前副市长武银星受审</a><br></h3>2月4日，内蒙古巴彦淖尔市前副市长、河套区管理总局（简称河灌总局）......<br><img align="bottom" src="https://raw.githubusercontent.com/yrsmsb310/www/master/t/ntdtv/time.gif">02月04日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/4/n12732582.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/02/6a24e36ed3dc0e15b039bfd99c384592-320x200.jpg" align ="left"></a><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/4/n12732582.md#1" target="_blank">京警以核酸检测当诱饵 访民杨浩被刑拘</a><br></h3>在京访民杨浩1月21日在租屋处被北京警察以核酸检测为由诱骗带走。2......<br><img align="bottom" src="https://raw.githubusercontent.com/yrsmsb310/www/master/t/ntdtv/time.gif">02月04日</td></tr>
