--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -55,6 +55,6 @@
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/2/n12727150.md#1" target="_blank">立百病毒致死率高 专家示警下一场大流行威胁</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/2/n12727150.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/Nipah-150x120.jpg" align ="left"></a>药品可及性基金会发布报告，指全球各大制药公司虽加大力道因应新冠肺炎疫情，却对下一场疾病大流行几无准备。执行长耶尔（Jayasree K Iyer）以立百病毒为例，他指出，立百病毒是另一个引人高度关切的新兴传染病，可能随时会爆发。下一场疾病大流行可能是具有抗药性的传染病。为什么专家们要担心大流行，因为病毒会突变。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月02日 2:01 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/2/n12727206.md#1" target="_blank">最古老的美国总统就职典礼照片 摄于1857年</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/2/n12727206.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/15-james-buchanan-inauguration2-150x120.jpg" align ="left"></a>美国总统就职典礼是国际社会近期关注的焦点之一。这次的就职典礼有重兵把守，而且因为中共肺炎（武汉肺炎）疫情而禁止民众到现场观礼，所以格外引起人们的关注。人们可能会好奇，在美国创建初期，总统就职典礼是什么样子？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月02日 1:49 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/1/n12726617.md#1" target="_blank">这时喝水排毒快！早晚喝对水养生 还能控血糖</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/1/n12726617.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/drink-water_749000476-150x120.jpg" align ="left"></a>喝水补水虽然是最普通的事，但却能帮助身体运输营养，调节新陈代谢，进而增强人体对疾病的抵抗力，排除毒素。那么，什么时间应该多喝水？早上、下午、晚上如何喝水才养生？不少人知道早上起来应该喝一杯水，但是喝什么样的水比较好呢？膀胱经流注的时间，也是身体代谢排毒最旺盛的时间，全身的毒素通过膀胱和肾脏排泄。在这个时间喝水......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月02日 8:45 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/1/n12726294.md#1" target="_blank">中医师用2种水果干煮水喝 养胃、改善脂肪肝</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/1/n12726294.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/dried-fruit-water_347296889-150x120.jpg" align ="left"></a>用水果干煮水喝，补充营养、补给水分与暖和身体这三件事可以一次达成。更棒的是，整颗水果都可以毫不浪费地吃掉，不会制造厨余，所有精华都能对身体派上用场。中医医学博士杨高木祐子教你用最常见的水果煮果干水，养胃、护肤、改善脂肪肝。柳丁果干水，养胃、减肥、改善脂肪肝。草莓果干水，护肤、增免疫、提升肝功能......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月02日 3:13 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/4/n12733088.md#1" target="_blank">乳癌增生移转 中研院发现关键蛋白质</a><br></h3>中研院基因体研究中心助研究员黄雯华团队，发现并证实乳癌恶化机制；蛋白质DSG2会随着微环境的氧气含量而增减，促使乳癌的增生与移转。这项研究首次观察到，癌症的蛋白质会动态变化并影响癌症病程，未来可望应用于临床诊断及治疗，包括癌症诊断生物标记、预后追踪疗效、标靶治疗等。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月04日 9:38 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/news2008.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/news2008_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/news2008_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/news2008_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/news2008_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/news2008_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/news2008_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/news2008_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/news2008_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/news2008_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/news2008_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/yrsmsb310/djy/blob/master/gb/news2008.md#1<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/news2008.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yrsmsb310/djy/blob/master/gb/news2008.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/news2008.htm">https://www.epochtimes.com/gb/news2008.htm</a>    （国内需<a href="https://github.com/yrsmsb310/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
