--- a/gb/nf3046.md
+++ b/gb/nf3046.md
@@ -34,7 +34,7 @@
 
 2020年，继前中共政治局常委、中央政法委书记周永康之后，现任中共政治局常委、中纪委书记赵乐.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月15日 11:04 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/13/n12685476.md#1" target="_blank">中国留学生：免遭报应 赶紧跟中共划清界限</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/13/n12685476.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/1910201838461973-600x400-150x120.jpg" align ="left"></a>新年伊始，中国民众纷纷在大纪元网站上声明退出中共的党、团、队组织（三退）。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月14日 9:10 AM							</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/10/n12678167.md#1" target="_blank">王友群：被举报到二十九国 傅政华难逃大审判</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/10/n12678167.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/01/fu-zhenghua-1-CFP413657043-600x400-1-2-150x120.jpg" align ="left"></a>近期，中共全国政协社会和法制委员会副主任傅政华，其迫害法轮功的恶行，被法轮功学员举报给29国政府，要求对傅政华及其家属依法予以制裁，包括拒发签证、冻结资产等。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月10日 9:36 AM							</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/4/n12733533.md#1" target="_blank">三退声明精选（2021/02/04）</a><br></h3>从小就反感共产党，祖辈就是文革受害者，对共产党的邪行无比厌恶。加入少先队和共青团是学校的规定，非本人意愿。但坚决不入党，平时也坚持立场，绝不与魔鬼同流合污！......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月05日 12:17 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/4/n12731829.md#1" target="_blank">三退声明精选（2021/02/03）</a><br></h3>我是一名事业单位的80后。我今天听说了抹兽印，保平安的事情，以前从来没有听说过，我认为这个是一个好事。现在的年轻人对传统文化中令人敬畏的力量都不太感兴趣了，加入共产党组织时发毒誓像喝水一样平常。但小的时候，我的父亲是一个气功爱好者，也爱给我摆一些关于气功的龙门阵，我知道科学所不能解释的很多现象，知道天意、天道是很可能真实不虚的事情。我本不想入党，但去年单位死.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月04日 11:07 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/2/n12726893.md#1" target="_blank">三退声明精选（2021/02/01）</a><br></h3>中共执政几十年，害死几千万人，不断作恶，腐败的香港政府依附中共去行恶，招致香港人的反送中，反中共，反恶法廿三条，反港区国安法等一系列抵抗暴权的社会运动，香港人是对抗邪恶魔鬼的最前线正义勇士，香港政府强迫所有香港公务员宣誓效忠其邪恶政权及拥护暴权基本法港区国安法，否则解除其公务员一职，失去饭碗，这种强迫宣誓的做法明显是想消灭一个对抗魔鬼的正义力量，其目的多么邪.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月02日 9:16 AM							</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/30/n12721869.md#1" target="_blank">三退声明精选（2021/01/29）</a><br></h3>最近有幸阅读了《九评共产党》一书。《九评》使我彻底认清了中共的邪恶本性——一个妄图毁灭人类的地地道道的邪教。本人在此严正声明：从即日起退出被其蒙蔽与欺骗而加入的中国共产党，同时退出儿时加入的“少年儿童队”（现称“少年先锋队”）及中学时期加入的“共青团”，彻底否定在加入这些组织时举手发过的要“为共产主义奋斗终身”，随时准备为中共牺牲一切的毒誓！作一个对得起祖先.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年01月30日 9:32 AM							</td></tr>
