--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -19,11 +19,11 @@
 
 年轻人当时完全没有不舒服的感觉，自然没把他的.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月04日 8:25 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12731439.md#1" target="_blank">天冷4种粥暖胃又补肾 一碗粥大补气血</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12731439.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/porridge_1578287302-copy-150x120.jpg" align ="left"></a>冬日天气寒冷，很适合吃一点温补驱寒的粥品。中国人食粥的历史很久，自有历史以来便有粥的故事相传，在黄帝时期，典籍中已有记载。冬季喝4种粥 养胃去寒、补气血：介绍一些天冷适用的粥品药膳。● 桂圆黑糖粥。先煮粥，待熟时，加入桂圆与黑糖，再煮至米烂汤稠，可看到粥油形成最好。此粥可大补气血、开胃益脾......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月04日 8:17 AM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12731283.md#1" target="_blank">“17年蝉”今夏将现身新泽西 或有数十亿之多</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12731283.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-50845196-150x120.jpg" align ="left"></a>今年夏天，经过17年漫长的地下生长期，大量“17年蝉”将破土而出，以其标志性的嗡嗡声充斥着新泽西的整个夏天。
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12731283.md#1" target="_blank">“17年蝉”今夏将现身新泽西 或有数十亿之多</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12731283.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-50845196-150x120.jpg" align ="left"></a>今年夏天，经过17年漫长的地下生长期，大量“17年蝉”将破土而出，以其标志性的嗡嗡声充斥新泽西的整个夏天。
 
 “17年蝉”也叫“周期蝉”，是北美洲一种穴居17年才能化羽而出的蝉。它们在地底蛰伏17年始出，尔后附上树枝蜕皮，然后交配。雄蝉交配后即死去，雌蝉亦于产卵后死亡。
 
-新泽西州是有“17年蝉”的15个州之.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月04日 3:57 AM			</td></tr>
+新泽西州是有“17年蝉”的15个州之一.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月04日 3:57 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/1/n12724658.md#1" target="_blank">【地中海炖汤】疗愈汤品 希腊番茄炖牛肉丸</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/1/n12724658.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/f0445044c9fce7817692ffb9528f9d4a-e1612149143337-150x120.jpg" align ="left"></a>多汁Q弹嫩香的希腊肉丸子是餐馆热门菜，搭配地中海的番茄酱食谱，一入口清爽酸甜，立即能感受到地中海的艳阳景致，身子不自觉都热了起来。“希腊番茄炖牛肉丸”一道菜就将地中海的佳肴特色都充分表现，健康咸香美味又可口，百吃不厌之外，有时还会想念。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月04日 3:40 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12730717.md#1" target="_blank">【美食天堂】炒年糕做法～祝年年高升！</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12730717.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/Stir-Fry-Nian-Gao2-150x120.jpg" align ="left"></a>今天我们一起做炒年糕！年糕是过年必吃的年菜，因为它象征着年年高升。为了庆祝农历新年，我和家乐牌合作。我们一起做炒年糕。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月03日 9:31 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12729347.md#1" target="_blank">【重播】疫苗对变种病毒有效吗？抗新冠忽视1个问题</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/3/n12729347.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/2.3.21-00-Health-Live-150x120.jpg" align ="left"></a>新冠疫苗对南非变种效力下降？疫苗对变种病毒防护力如何，专家完整解析！
