--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -1,7 +1,8 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table align=center border="0"><tr><td colspan="3" VALIGN=TOP nowrap><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/11.jpg" title="头条要闻" alt="头条要闻"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/zt.md#1"><img src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/13.jpg" title="专题" alt="专题"></a></td></tr><tr><td colspan="3" VALIGN=TOP nowrap><p> <a href="https://github.com/brkhkd3127/www/blob/master/README.md#1" target="_blank">翻墙</a> | <a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank">神话</a> | <a href="https://gitlab.com/szzdlab/vdhG75Ez1eTyeZN/raw/master/hG75Ez1eTyeZN.webm" target="_blank">归途</a> | <a href="https://gitlab.com/szzdlab/vdYongHeng-360p/raw/master/YongHeng-360p.webm" target="_blank">永恒</a> | <a href="https://gitlab.com/szzdlab/vdLijianhui-200804-720/raw/master/Lijianhui-200804-720.webm" target="_blank">回归</a> | <a href="https://gitlab.com/szzdlab/vddmt/raw/master/dmt.webm" target="_blank">江鬼其人</a> | <a href="https://gitlab.com/szzdlab/vdszt/raw/master/szt.webm" target="_blank">寻正道</a> | <a href="https://gitlab.com/szzdlab/vdUc6y/raw/master/Uc6y.webm" target="_blank">渐冻人</a> | <a href="https://gitlab.com/szzdlab/vd425/raw/master/425.webm" target="_blank">四二五</a> | <a href="https://gitlab.com/szzdlab/vdlin-720p/raw/master/lin-720p.webm" target="_blank">世界小姐</a> | <a href="https://gitlab.com/szzdlab/vdwnrl/raw/master/wnrl.webm" target="_blank">为你而来</a> | <a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank">无罪辩护</a> |  <a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank">终级目的</a> | <a href="https://gitlab.com/szzdlab/vdmtdwh/raw/master/mtdwh.webm" target="_blank">漫谈党文化</a></p><p><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank">九评</a> | <a href="https://gitlab.com/szzdlab/vdzfzx/raw/master/zfzx.webm" target="_blank">伪火</a> | <a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank">剖析</a> | <a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank">旅程</a> | <a href="https://gitlab.com/szzdlab/vd5-YiSu_MH-360p/raw/master/5-YiSu_MH-360p.webm" target="_blank">义诉</a> | <a href="https://gitlab.com/szzdlab/vd5N.8/raw/master/5N.8.webm" target="_blank">活摘调查</a> | <a href="https://gitlab.com/szzdlab/vdTdowhauWx9WiM/raw/master/TdowhauWx9WiM.webm" target="_blank">藏字石</a> | <a href="https://gitlab.com/szzdlab/vd1-Xuezhongmei_MH-360p/raw/master/1-Xuezhongmei_MH-360p.webm" target="_blank">雪中梅</a> | <a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank">歌唱家</a> | <a href="https://gitlab.com/szzdlab/vdhuangxiaomin-tuidang/raw/master/huangxiaomin-tuidang.webm" target="_blank">奥运名将</a> | <a href="https://gitlab.com/szzdlab/vdwm/raw/master/wm.webm" target="_blank">告诉未来</a> | <a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank">清华学子</a> | <a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank">红朝阴谋</a> | <a href="https://gitlab.com/szzdlab/vdfy/raw/master/fy.webm" target="_blank">风雨天地行</a></p></td></tr>
-<tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12751193.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-1301952216-320x200.jpg"><p align="center">【直播】弹劾审讯：参院再达协议不传证人</p></a>
-<a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12751193.md#1" title="【直播】弹劾审讯：参院再达协议不传证人""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-1301952216-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12751292.md#1" title="武汉鲜花脱销 市民：佐证染疫死亡人数惊人""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/02/59c07556f74305c00fa650c58819f9a2-320x200.jpg">&nbsp;</a>
+<tr><td VALIGN=TOP width="370" height="1000"><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12751193.md#1"><img width="320" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-1301993035-320x200.jpg"><p align="center">【直播】二次弹劾 参院判川普无罪</p></a>
+<a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12751193.md#1" title="【直播】二次弹劾 参院判川普无罪""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-1301993035-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12751292.md#1" title="武汉鲜花脱销 市民：佐证染疫死亡数惊人""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/02/59c07556f74305c00fa650c58819f9a2-320x200.jpg">&nbsp;</a>
+<a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/12/n12750047.md#1" title="中国各军区兵种大法弟子给李洪志大师拜年""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/02/2021-2-12-2101261606474676-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12751158.md#1" title="日本福岛附近7.1级强震 东京有强烈震感""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/02/000_92X2VD-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/10/n12744350.md#1" title="中共海外舆论操纵手法大曝光 西方如何应对""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/09/ffbb298fdaf8bf5a9bf6d14c7c2cbd2f-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/18/12/27/n10936246.md#1" title="魔鬼在统治着我们的世界(28)：结束语""><img width="73" src="https://i.epochtimes.com/assets/uploads/2018/12/c54ed2bb003ac1dc51714854df673046-320x200.jpg">&nbsp;</a>
@@ -11,24 +12,22 @@
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/12/n12750063.md#1" title="香港法轮功学员向师尊拜年 感谢救度之恩""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/02/210212085808100311-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/12/n12749595.md#1" title="多地禁令难阻炮竹声声 大陆警察忙抓人""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/02/Unknown-4-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/12/n12749457.md#1" title="【重播】弹劾审讯第4天 川普律师团队抗辩""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-1301645228-320x200.jpg">&nbsp;</a>
-<a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/12/n12749639.md#1" title="新年团拜会 年轻男子环坐习近平四周引猜疑""><img width="73" src="https://i.epochtimes.com/assets/uploads/2021/02/eb08f12bf8c431b67e83c27ebc8815b6-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/yrsmsb310/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://yrsmsb310.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>11分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12751193.md#1">【直播】弹劾审讯：参院再达协议不传证人</a><br>
-:clock8: <em>14分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12751292.md#1">武汉鲜花脱销 市民：佐证染疫死亡人数惊人</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12751262.md#1">美报税季到 为何你要了解纾困支票正确金额</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12750410.md#1">华人中领馆前抗议 给中共送“黑棺”</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12751108.md#1">春晚含五大洲歌舞 政协前官员揭中共企图</a><br>
-:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12750394.md#1">纽约共谍案 昂旺狱中染疫 缴200万元获保释</a><br>
+:clock8: <em>11分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12751193.md#1">【直播】二次弹劾 参院判川普无罪</a><br>
+:clock8: <em>33分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/12/n12749463.md#1">慈悲能容天地春 俄裔学员感恩李洪志大师</a><br>
+:clock8: <em>2小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12751292.md#1">武汉鲜花脱销 市民：佐证染疫死亡数惊人</a><br>
+:clock8: <em>3小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12751262.md#1">美报税季到 为何你要了解纾困支票正确金额</a><br>
+:clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12750410.md#1">华人中领馆前抗议 给中共送“黑棺”</a><br>
+:clock8: <em>4小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12751108.md#1">春晚含五大洲歌舞 政协前官员揭中共企图</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/12/n12749602.md#1">中共常委赵乐际保不了弟弟 中南海酿巨变</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/12/n12748527.md#1">央视春晚魔术多次穿帮 网民吐槽被删</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/12/n12748319.md#1">央视春晚引民愤 人权律师：春晚是个笑话</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/12/n12748366.md#1">“给人添堵” 央视春晚催婚小品引来炮轰</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/11/n12747571.md#1">中共禁BBC在华落地 英外相和美国务院回应</a><br>
-<a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/11/n12747231.md#1">北京延庆豆腐渣房 官员验房遇“电梯惊魂”</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/11/n12747627.md#1">腾讯高管被抓 曾向孙力军分享微信信息</a><br>
-<a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/12/n12748871.md#1">赵乐际弟赵乐秦卸任 旧部美女书记接连被批</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/12/n12749444.md#1">中宣部前官员去世 习近平母亲与鲍彤送花圈</a><br>
+<a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/12/n12748871.md#1">赵乐际弟赵乐秦卸任 旧部美女书记接连被批</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/12/n12748108.md#1">大陆富豪买GameStop被套 损失八百万美元</a><br>
 <br><p align="center"><a href="https://github.com/yrsmsb310/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/12/n12749309.md#1">【名家专栏】拜登取消Keystone油管给谁献大礼？</a><br>
@@ -100,14 +99,14 @@
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/9/n12742854.md#1">专家张文宏暗批中共防疫政策将致人精神崩溃</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/9/n12742621.md#1">耿潇男夫妇均被判刑 好友许章润被堵家中</a><br>
 <br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/nsc413.md#1">更多要闻......</a></p></td><td VALIGN=TOP rowspan=7 width="156" align="middle"><a href="https://gitlab.com/szzdlab/vdSY-Classical-Chinese-Dance-Technique-Collection-2018/raw/master/SY-Classical-Chinese-Dance-Technique-Collection-2018.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"><br>神韵古典舞表演</a><br><a href="https://gitlab.com/szzdlab/vd9p/raw/master/9p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/9ping.jpg" title="九评共产党" alt="九评共产党"><br>九评共产党</a><br><a href="https://gitlab.com/szzdlab/vdzjmd1_19/raw/master/zjmd1_19.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"><br>共产主义终极目的</a><br><a href="https://gitlab.com/szzdlab/vdzf-dsp-1128/raw/master/zf-dsp-1128.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weihuo.jpg" title="中共的伪火骗局"" alt="中共的伪火骗局""><br>中共的伪火骗局"</a><br><a href="https://gitlab.com/szzdlab/vdst5-29/raw/master/st5-29.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"><br>古今奇观-藏字石</a><br><a href="https://gitlab.com/szzdlab/vd3-JTT_CN_MH-360p/raw/master/3-JTT_CN_MH-360p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"><br>通往天安门的旅程</a><br><a href="https://gitlab.com/szzdlab/vdwl/raw/master/wl.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/weilai.jpg" title="未来人的神话" alt="未来人的神话"><br>未来人的神话故事</a><br><a href="https://gitlab.com/szzdlab/vdhongchaoyinmou-hi/raw/master/hongchaoyinmou-hi.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"><br>中共罪恶的活摘</a><br><a href="https://gitlab.com/szzdlab/vdtzrs/raw/master/tzrs.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/huozhai.jpg" title="铁证如山" alt="铁证如山"><br>铁证如山</a><br><a href="https://gitlab.com/szzdlab/vder3n_3VVJ/raw/master/er3n_3VVJ.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"><br>一家四口死于暴政</a><br><a href="https://gitlab.com/szzdlab/vdXmL0_0XDL2p/raw/master/XmL0_0XDL2p.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"><br>弟妹相继死于迫害</a><br><a href="https://gitlab.com/szzdlab/vdNG8l/raw/master/NG8l.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"><br>她们被中共迫害死</a><br><a href="https://gitlab.com/szzdlab/vdwt6Y_vPhM/raw/master/wt6Y_vPhM.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"><br>双城血泪</a><br><a href="https://gitlab.com/szzdlab/vd5Vu3_XS2V/raw/master/5Vu3_XS2V.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"><br>无罪辩护震撼人心</a><br><a href="https://gitlab.com/szzdlab/vdvG2w_fwq/raw/master/vG2w_fwq.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/6c10-720.jpg" title="从610到720" alt="从610到720"><br>从610到720</a><br><a href="https://gitlab.com/szzdlab/vdO2jN_uD/raw/master/O2jN_uD.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"><br>中共官员的选择</a><br><a href="https://gitlab.com/szzdlab/vd1400forge-1210/raw/master/1400forge-1210.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/1400l.jpg" title="剖析1400例" alt="剖析1400例"><br>剖析1400例</a><br><a href="https://gitlab.com/szzdlab/vdC1WZ_mj/raw/master/C1WZ_mj.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/425.jpg" title="万人上访真相" alt="万人上访真相"><br>万人上访真相</a><br><a href="https://gitlab.com/szzdlab/vdqh/raw/master/qh.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"><br>被迫害的清华学子</a><br><a href="https://gitlab.com/szzdlab/vdJZ5e_5Vusp/raw/master/JZ5e_5Vusp.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/jian-z513.jpg" title="见证513" alt="见证513"><br>见证513</a><br><a href="https://gitlab.com/szzdlab/vd0iY/raw/master/0iY.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"><br>功夫 寻道</a><br><a href="https://gitlab.com/szzdlab/vdguanguimin/raw/master/guanguimin.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"><br>歌唱家的人生奇迹</a><br><a href="https://gitlab.com/szzdlab/vdmjjy/raw/master/mjjy.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"><br>名校精英的选择</a><br><a href="https://gitlab.com/szzdlab/vdc4rB_QQbr/raw/master/c4rB_QQbr.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"><br>音乐之家的故事</a><br><a href="https://gitlab.com/szzdlab/vdO23c_E/raw/master/O23c_E.webm" target="_blank"><img width="130" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/djy/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"><br>平凡中的不平凡</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/nizhibeituolanlao.jpg" title="善良女士被投男牢"  alt="善良女士被投男牢"><br>善良女士被投男牢</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/huozhai1.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"><br>警卫目击中共活摘</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/motoumks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"><br>马克思的成魔之路</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/konggaojm.jpg" title="303万人的举报"  alt="303万人的举报"><br>303万人的举报</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/lianganduibi.jpg" title="海峡两岸强烈反差"  alt="海峡两岸强烈反差"><br>海峡两岸强烈反差</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"><br>印度媒体报道东方</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="128" src="https://raw.githubusercontent.com/brkhkd3127/www/master/t/130/xuejiao.jpg" title="不一样的海外校园"  alt="不一样的海外校园"><br>不一样的海外校园</a><br>
-<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://219.85.111.244/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 32,653</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
+<tr><td VALIGN=middle width="370"><div align="center"><h2><a href="http://36.233.143.130/UmhjM">我要退出中共的党团队</a></h2>昨日三退人数: 32,653</div><br></td><td VALIGN=middle width="371"><h3 align="center"><strong align="center">
 
 ```diff
 !退出中共党、团、队总人数:
 
-!共 372,687,876 人
+!共 372,687,949 人
 ```
-</strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12750040.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2019/11/GettyImages-689545008-600x400-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12750040.md#1">中共滥用刷脸引反感 大陆民众被变“透明人”</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12749659.md#1">北京共有产权房乱象 豆腐渣工程堪忧</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12749464.md#1">澳洲参议员：感谢上帝 年轻人在对抗中共</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12748741.md#1">大陆人权律师余文生获马丁?恩纳斯人权奖</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/11/n12747445.md#1">北京艺术家刘进兴出狱 因“呐喊”作品被判刑</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/11/n12746403.md#1">重庆访民吃年饭 危文元遭警告要给官员留面子</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/13/n12750651.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1228208941-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/13/n12750651.md#1">资金承压 大陆紫光集团欲出售股权融资</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/13/n12750550.md#1">海航集团破产最新发展 原股东权益将清零</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/13/n12750082.md#1">银行以指导价放贷 深圳二手房首付升至5成</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12749629.md#1">中共加强对巴基斯坦一带一路更多控制惹议</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12749475.md#1">维权不成反入中共“黑名单” 大陆劳工更艰辛</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12748765.md#1">传马云在海南岛高尔夫球场现身</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/13/n12751264.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-1300357867-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/13/n12751264.md#1">白宫：对世卫在中国病毒调查报告深表关切</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/13/n12750277.md#1">中共司法解释推缺席审判 专家：非法程序</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/13/n12750299.md#1">谭德塞改口：不排除病毒起源所有假设</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/13/n12750275.md#1">欧盟拟建先进半导体厂 考虑与台积电三星合作</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/13/n12750203.md#1">台裔太空人获NASA重用 2022年再飞太空站</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12749830.md#1">欧盟就人权和南中国海问题挑战中共</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/13/n12751235.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/01/7132734254670dba3d3d943c6271a0ee-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/13/n12751235.md#1">知情人：吉林长春传染病院因主任染疫被封院</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12749768.md#1">湄公河水位下降严重 国际组织吁中共公布资料</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12749636.md#1">塔吉克斯坦、新疆边境附近发生6.1级地震</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12748683.md#1">受大雾影响 大陆87条高速、115路段封闭</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12748317.md#1">山东平邑县除夕现杀人案 致6死嫌疑人自杀</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/11/n12747594.md#1">中建集团修建香港临时医院 刚完工就漏水</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12748758.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/02/16_3bc8b0f454c47d541ee7e30586dfc8f3-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12748758.md#1">网络疯传中共武警持“狼牙棒”等凶器照片</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/11/n12748024.md#1">海外华裔学者恭祝法轮功团体和李大师过年好</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/10/n12745326.md#1">中国新生人口崩盘式下跌 厦门和信阳减半</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/10/n12745446.md#1">三退声明精选（2021/02/10）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/9/n12742490.md#1">【疫情2.9】英国又现两款中共病毒新变种</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/9/n12742175.md#1">兰州某学院餐厅食物含毒物 校方被指监管缺失</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/13/n12751224.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/02/b57acda4fc836ebbe734788238e48913-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/13/n12751224.md#1">央视春晚又现涂黑脸表演 再次恶评如潮</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/10/n12744300.md#1">广西多所学校乱收费 人脸识别服务费达上百万</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/7/n12739084.md#1">广州教授抄袭米菲一度辩解 今同意永久停用</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/6/n12737703.md#1">国安法进香港课堂 卢比奥促拜登制裁中共官员</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/4/n12732660.md#1">贾平凹之女“诗作”上热搜 网民指其为靠爸族</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/2/n12727149.md#1">四川女大学生学车后失踪遇害 疑遭奸杀</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
+</strong></h3></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>中国人权</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12750040.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2019/11/GettyImages-689545008-600x400-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12750040.md#1">中共滥用刷脸引反感 大陆民众被变“透明人”</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12749659.md#1">北京共有产权房乱象 豆腐渣工程堪忧</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12749464.md#1">澳洲参议员：感谢上帝 年轻人在对抗中共</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12748741.md#1">大陆人权律师余文生获马丁?恩纳斯人权奖</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/11/n12747445.md#1">北京艺术家刘进兴出狱 因“呐喊”作品被判刑</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/11/n12746403.md#1">重庆访民吃年饭 危文元遭警告要给官员留面子</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid278.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>中国经济</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/13/n12750651.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1228208941-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/13/n12750651.md#1">资金承压 大陆紫光集团欲出售股权融资</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/13/n12750550.md#1">海航集团破产最新发展 原股东权益将清零</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/13/n12750082.md#1">银行以指导价放贷 深圳二手房首付升至5成</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12749629.md#1">中共加强对巴基斯坦一带一路更多控制惹议</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12749475.md#1">维权不成反入中共“黑名单” 大陆劳工更艰辛</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12748765.md#1">传马云在海南岛高尔夫球场现身</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid283.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>大陆政治</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/13/n12751264.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-1300357867-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/13/n12751264.md#1">白宫：对世卫在中国病毒调查报告深表关切</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/13/n12750277.md#1">中共司法解释推缺席审判 专家：非法程序</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/13/n12750299.md#1">谭德塞改口：不排除病毒起源所有假设</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/13/n12750275.md#1">欧盟拟建先进半导体厂 考虑与台积电三星合作</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/13/n12750203.md#1">台裔太空人获NASA重用 2022年再飞太空站</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12749830.md#1">欧盟就人权和南中国海问题挑战中共</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid277.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>天灾人祸</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/13/n12751235.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/01/7132734254670dba3d3d943c6271a0ee-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/13/n12751235.md#1">知情人：吉林长春传染病院因主任染疫被封院</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12749768.md#1">湄公河水位下降严重 国际组织吁中共公布资料</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12749636.md#1">塔吉克斯坦、新疆边境附近发生6.1级地震</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12748683.md#1">受大雾影响 大陆87条高速、115路段封闭</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12748317.md#1">山东平邑县除夕现杀人案 致6死嫌疑人自杀</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/11/n12747594.md#1">中建集团修建香港临时医院 刚完工就漏水</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid280.md#1">更多......</a></p></td></tr><tr><td VALIGN=TOP width="370"><h2><p><strong>社会万象</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12748758.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/02/16_3bc8b0f454c47d541ee7e30586dfc8f3-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/12/n12748758.md#1">网络疯传中共武警持“狼牙棒”等凶器照片</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/11/n12748024.md#1">海外华裔学者恭祝法轮功团体和李大师过年好</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/11/n12747231.md#1">北京延庆豆腐渣房 官员验房遇“电梯惊魂”</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/10/n12745326.md#1">中国新生人口崩盘式下跌 厦门和信阳减半</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/10/n12745446.md#1">三退声明精选（2021/02/10）</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/9/n12742490.md#1">【疫情2.9】英国又现两款中共病毒新变种</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid282.md#1">更多......</a></p></td><td VALIGN=TOP width="371"><h2><p><strong>科教文化</strong></p></h2><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/13/n12751224.md#1"><img width="320" align ="left" src="https://i.epochtimes.com/assets/uploads/2021/02/b57acda4fc836ebbe734788238e48913-320x200.jpg"></a><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/13/n12751224.md#1">央视春晚又现涂黑脸表演 再次恶评如潮</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/10/n12744300.md#1">广西多所学校乱收费 人脸识别服务费达上百万</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/7/n12739084.md#1">广州教授抄袭米菲一度辩解 今同意永久停用</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/6/n12737703.md#1">国安法进香港课堂 卢比奥促拜登制裁中共官员</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/4/n12732660.md#1">贾平凹之女“诗作”上热搜 网民指其为靠爸族</a><br><a href="https://github.com/brkhkd3127/djy/blob/master/gb/21/2/2/n12727149.md#1">四川女大学生学车后失踪遇害 疑遭奸杀</a><br><br><p align="center"><a href="https://github.com/brkhkd3127/djy/blob/master/gb/ncid281.md#1">更多......</a></p></td></tr>
 <tr><td VALIGN=TOP width="370"><h2><p><strong>独家视角</strong></p></h2><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/5/n12736224.md#1">【独家】国防密件揭秘中共“六代战机”</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/20/n12700072.md#1">【独家】中国东盟峰会 中共防嘉宾不利言论</a><br>
 <a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/1/21/n12703413.md#1">【独家】外事文件曝中共高层误判国际局势</a><br>
