--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -29,10 +29,7 @@
 死亡重获新生，
 生命即将合一。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月11日 10:58 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/5/n12734415.md#1" target="_blank">中国新年：回溯辛丑三百年 危难中寻曙光</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/5/n12734415.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/12ab56bc30b7a3afeea2cbfe0ecb2308-150x120.png" align ="left"></a>从2021年往上溯三百年：1961年、1901年、1841年、1781年、1721年和1661年都是辛丑年，中国和世界发生了什么大事？透给今之人什么讯息呢？其中露出解难的曙光。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月11日 6:01 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/11/n12746683.md#1" target="_blank">五律：除夕有怀（外一首）</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/11/n12746683.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2017/11/1204110515531567-600x400-1-150x120.jpg" align ="left"></a>岁从今夜尽 
-思向故乡飞 
-炮竹前门响 
-家人饭桌围......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月11日 5:12 PM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12751587.md#1" target="_blank">诗歌：红尘</a><br></h3>迷雾重重锁红尘 诸般诱惑缚心身 迷中苦中好修炼 真善忍中铸真神......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月14日 7:24 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/6/n12737500.md#1" target="_blank">诗歌：善通未来（外一首）</a><br></h3> 去留人自选， 善恶是依凭。 俱是人心定， 已言真相明。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月14日 12:12 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12751023.md#1" target="_blank">学子的心声：从这个习惯中我看到</a><br></h3>我以前也是个晚睡晚起的不良习惯者，追剧、打电玩，书没念就算了，脸也长了痘痘、黑眼圈也出现了，情绪也很差............<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月13日 7:40 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/12/n12748729.md#1" target="_blank">调笑令．辛丑新年，游子不能回家</a><br></h3> 辛丑， 辛丑， 过年冷亲凉友。 天边一抹朝霞， 游子思乡盼家。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月13日 11:13 AM			</td></tr>
