--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -12,7 +12,7 @@
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/10/n12744350.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2020/09/ffbb298fdaf8bf5a9bf6d14c7c2cbd2f-320x200.jpg" align ="left"></a><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/10/n12744350.md#1" target="_blank">中共海外舆论操纵手法大曝光 西方如何应对</a><br></h3>冷战时代，中共政权没有机会在民主国家内部活动，随着全球化的到来，过......<br><img align="bottom" src="https://raw.githubusercontent.com/yrsmsb310/www/master/t/ntdtv/time.gif">02月13日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12750651.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2020/10/GettyImages-1228208941-320x200.jpg" align ="left"></a><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12750651.md#1" target="_blank">资金承压 大陆紫光集团欲出售股权融资</a><br></h3>有消息人士透露，大陆清华紫光集团为了筹集更多资金，有意出售旗下的晶......<br><img align="bottom" src="https://raw.githubusercontent.com/yrsmsb310/www/master/t/ntdtv/time.gif">02月13日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12751008.md#1" target="_blank"><img width="250" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg" align ="left"></a><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12751008.md#1" target="_blank">公共情妇李薇握有中共高官不可告人秘密</a><br></h3>中共官员贪财好色，荒淫无度。被称为中共高官“公共情妇”的商人李薇曾......<br><img align="bottom" src="https://raw.githubusercontent.com/yrsmsb310/www/master/t/ntdtv/time.gif">02月13日</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12750550.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/02/6cab5d9587ecc1ad64bede18094da114-600x400-320x200.jpg" align ="left"></a><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12750550.md#1" target="_blank">海航集团破产最新发展 原股东权益将清零</a><br></h3>海南省高级法院日前就海航破产重组案发出了受理重整的民事裁定书， 据......<br><img align="bottom" src="https://raw.githubusercontent.com/yrsmsb310/www/master/t/ntdtv/time.gif">02月13日</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12750550.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/02/6cab5d9587ecc1ad64bede18094da114-600x400-320x200.jpg" align ="left"></a><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12750550.md#1" target="_blank">海航集团破产最新发展 原股东权益将清零</a><br></h3>海南省高级法院日前就海航破产重组案发出了受理重整的民事裁定书，据悉......<br><img align="bottom" src="https://raw.githubusercontent.com/yrsmsb310/www/master/t/ntdtv/time.gif">02月13日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12750277.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2012/10/1210260106581657-320x200.jpg" align ="left"></a><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12750277.md#1" target="_blank">中共司法解释推缺席审判 专家：非法程序</a><br></h3>近日，中共最高法对刑事诉讼法作出司法解释时称，对境外被告人，可以适......<br><img align="bottom" src="https://raw.githubusercontent.com/yrsmsb310/www/master/t/ntdtv/time.gif">02月13日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12750374.md#1" target="_blank"><img width="250" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg" align ="left"></a><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12750374.md#1" target="_blank">山东一家六口除夕被灭门 细节曝光</a><br></h3>在大年三十除夕当天（2月11日），山东平邑县保太镇发生了一起灭门惨......<br><img align="bottom" src="https://raw.githubusercontent.com/yrsmsb310/www/master/t/ntdtv/time.gif">02月13日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12750082.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-643017024@1200x1200-1-320x200.jpg" align ="left"></a><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12750082.md#1" target="_blank">银行以指导价放贷 深圳二手房首付升至5成</a><br></h3>深圳二手房市场在中共深圳当局2月8日发布二手房价指导价格后发生转变......<br><img align="bottom" src="https://raw.githubusercontent.com/yrsmsb310/www/master/t/ntdtv/time.gif">02月13日</td></tr>
