--- a/gb/nsc1002.md
+++ b/gb/nsc1002.md
@@ -18,11 +18,12 @@
 <tr><td><h3><p><strong>饮食、生活、疾病、中医</strong></p></h3></td></tr><tr><td>
 <h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/10/n12744565.md#1" target="_blank">【重播】医师秘笈大公开 年菜防疫食材怎么选</a><br></h3>
 <h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/10/n12744939.md#1" target="_blank">坚果热量排名 哪个最高？3类人少吃坚果</a><br></h3>
+<h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/10/n12745159.md#1" target="_blank">健康足部：双脚承载着你的生命</a><br></h3>
+<h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/10/n12745187.md#1" target="_blank">找回童真 让成年人回归天真的七个办法</a><br></h3>
 <h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/11/n12746195.md#1" target="_blank">【重播】2021年不想犯太岁 几件事千万别做</a><br></h3>
 <h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/11/n12747322.md#1" target="_blank">让头发变黑就喝这碗 4种鸡汤补气又补血</a><br></h3>
 <h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/11/n12747555.md#1" target="_blank">飞水很多人做错了 5招给肉类去腥味</a><br></h3>
 <h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/13/n12751087.md#1" target="_blank">【重播】抗疫中700个医护的调查 结果为何？</a><br></h3>
-<h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/4/n12733306.md#1" target="_blank">气炸锅不是所有食材都能炸 不可忽略的3地雷</a><br></h3>
 <h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/6/n12736598.md#1" target="_blank">挑选干香菇、干贝有3秘诀 干货下锅前必做1件事</a><br></h3>
 <h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/6/n12737892.md#1" target="_blank">鸡蛋怎么存放及可保存多久？日本专家释疑</a><br></h3>
 <h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/9/n12741959.md#1" target="_blank">【重播】过年零食大排名 第1名是它</a><br></h3>
