--- a/gb/news2008.md
+++ b/gb/news2008.md
@@ -29,7 +29,9 @@
 送长辈的6大养生礼品，真的物有所值吗？哪几样有防疫功效？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月11日 9:18 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/10/n12744890.md#1" target="_blank">有吃蔬果还不够 10招轻松补足膳食纤维</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/10/n12744890.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/shutterstock_134822267-150x120.jpg" align ="left"></a>膳食纤维对人体健康很有益处，能促进肠胃蠕动，帮助减肥，控制胆固醇和血糖，降低罹患糖尿病或心脏病的风险。然而只吃蔬果很难摄取到基本需求量，将多种高纤食物结合正餐、点心或饮品，才能完整补充人体所需的纤维质。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月11日 2:33 PM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/11/n12746256.md#1" target="_blank">大多伦多今年平均房价或首破百万大关</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/11/n12746256.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/IMG_0571-150x120.jpg" align ="left"></a>未来想买大多区房子的人，要做好预算超支心理准备了。多伦多地产局（TRREB）周一（2月8日）警告，鉴于年初房屋销量和价格双双火爆，加上超低利率刺激，白领就业经济有望复苏，移民重新涌入，今年年底大多区平均房价估计会首破100万大关，从去年的92万9,692元上涨10%至102.5万。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月11日 11:41 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/10/n12745159.md#1" target="_blank">健康足部：双脚承载着你的生命</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/10/n12745159.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/sore-feet-e1600863689290-1200x710-150x120.jpg" align ="left"></a>在这次COVID-19疫情大流行期间，让我保持清醒的为数不多的事情之一就是走路。我们住在一条自行车和步行道附近，这条小路沿着一条小溪，穿过一些沼泽地，并环绕着一个小的开放公园。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月11日 5:47 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/10/n12744939.md#1" target="_blank">坚果热量排名 哪个最高？3类人少吃坚果</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/10/n12744939.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/shutterstock_749041759-copy-150x120.jpg" align ="left"></a>开心果、瓜子、花生、腰果、核桃都是逢年过节家中常吃的零嘴。坚果含有较好的不饱和脂肪酸，可预防心血管疾病并帮助维生素D等脂溶性维生素吸收。坚果中的维生素E可清除自由基以预防癌症。不同的坚果各有各的好，但有些经过加工调味后，热量和钠含量都偏高。因此，开心嗑瓜子等零嘴时，请留意别吃太多了，尤其是3类人。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月11日 4:30 AM			</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/10/n12745187.md#1" target="_blank">找回童真 让成年人回归天真的七个办法</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/10/n12745187.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/laughing-grandfather-and-grandson-1200x675-150x120.jpg" align ="left"></a>当感到压力太大时，休息一会儿回忆一下童年的快乐以及年轻时的梦想，就会让人精神焕发。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月11日 3:31 AM			</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/10/n12745254.md#1" target="_blank">2021旧金山湾区房价 1月份销售一览（1）</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/10/n12745254.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/204763fe5b06cf2569addd30a81cc758-150x120.png" align ="left"></a>以下表格即是2021年1月份，湾区部分城市的房产销售一览。
 注：房型CO是康斗，DE是独立房
 
@@ -59,7 +61,5 @@ https://www.facebook.com/BARealEstateClub/
 防新冠病毒，年节一定要避免2件事！
 
 常送长辈的6样养生礼品，人参、燕窝、鱼油??真的物有所值吗？哪些能帮助防疫？......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月09日 9:25 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/8/n12740616.md#1" target="_blank">阿马尔菲海岸线美景美食（8）美丽的卡普里岛（续）</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/8/n12740616.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/20210208_amalfi_helen_chou_01-150x120.jpg" align ="left"></a>（前言）地中海沿岸的南意大利有一条蜿蜒曲折的海岸线，她的美丽被无数人无数次列入一生必去之50个地方。她就是阿马尔菲海岸（Amalfi Coast），北起那不勒斯湾（Gulf of Naples），南止萨莱诺湾(Gulf of Salerno)，全长50公里。阿马尔菲海岸以其崎岖的地形，陡峭的悬崖，如画的美景，色彩缤纷的.........<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月09日 9:05 PM			</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/9/n12742496.md#1" target="_blank">小狗迷失在山区 善心夫妇背它10公里下山</a><br></h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/9/n12742496.md#1" target="_blank"><img width="150" src="https://i.epochtimes.com/assets/uploads/2021/02/labrador-retriever-5945792_1920-150x120.jpg" align ="left"></a>有一只小狗最近在爱尔兰的威克洛山脉（Wicklow Mountains）迷路，而且似乎被冻得寸步难行。所幸一对善心夫妇发现它，并背它走了10公里的山路，将它救下山。如今，它已经与主人团聚，恢复往日的快乐生活。......<br><img align="bottom" src="https://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2021年02月09日 6:50 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/news2008.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/news2008_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/news2008_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/news2008_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/news2008_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/news2008_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/news2008_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/news2008_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/news2008_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/news2008_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/yrsmsb310/djy/blob/master/gb/news2008_2.md#1">下一页</a></h3></td></tr>
 </table><div align="center"><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/yrsmsb310/djy/blob/master/gb/news2008.md#1<br><a href="https://github.com/yrsmsb310/djy/blob/master/gb/news2008.md#1"><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/yrsmsb310/djy/blob/master/gb/news2008.md%231" title="分享本文章"></a><br>原文地址： <a href="https://www.epochtimes.com/gb/news2008.htm">https://www.epochtimes.com/gb/news2008.htm</a>    （国内需<a href="https://github.com/yrsmsb310/www/blob/master/README.md#8">下载翻墙软件</a>才能访问）</div>
