--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -3,7 +3,7 @@
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12752323.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/02/134-320x200.jpg" align ="left"></a><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12752323.md#1" target="_blank">大年初二 宜昌网红吊桥侧翻 多人坠落茶园</a><br></h3>2月13日，大年初二，湖北省宜昌一网红吊桥侧翻，导致多人坠落茶园。...<br><img align="bottom" src="https://raw.githubusercontent.com/yrsmsb310/www/master/t/ntdtv/time.gif">02月14日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12752240.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/02/S__3383317-320x200.jpg" align ="left"></a><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12752240.md#1" target="_blank">大年初一到北京拜年 四川访民被关黑监狱</a><br></h3>四川罗江访民文仁贵，大年初一（2月12日）到北京府右街拜年，被四川......<br><img align="bottom" src="https://raw.githubusercontent.com/yrsmsb310/www/master/t/ntdtv/time.gif">02月14日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12752081.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2020/03/GettyImages-1139948605-320x200.jpg" align ="left"></a><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12752081.md#1" target="_blank">【疫情2.14】美国议员提法案 追责世卫</a><br></h3>据约翰?霍普金斯大学的统计数据，截至美东时间周日（2月14日）上午......<br><img align="bottom" src="https://raw.githubusercontent.com/yrsmsb310/www/master/t/ntdtv/time.gif">02月14日</td></tr>
-<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12752067.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2020/07/2-12-320x200.jpg" align ="left"></a><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12752067.md#1" target="_blank">天网义工募款送暖 助黄琦与母亲度过危难关头</a><br></h3>近日，天网义工得知黄琦狱中营养餐被停，以及90岁的黄母蒲文清女士肺......<br><img align="bottom" src="https://raw.githubusercontent.com/yrsmsb310/www/master/t/ntdtv/time.gif">02月14日</td></tr>
+<tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12752067.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2020/07/2-12-320x200.jpg" align ="left"></a><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12752067.md#1" target="_blank">六四天网义工募款 助黄琦与母亲渡过难关</a><br></h3>近日，天网义工得知黄琦狱中营养餐被停，以及90岁的黄母蒲文清肺癌已......<br><img align="bottom" src="https://raw.githubusercontent.com/yrsmsb310/www/master/t/ntdtv/time.gif">02月14日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12751919.md#1" target="_blank"><img width="250" src="https://i.epochtimes.com/assets/uploads/2021/02/GettyImages-1231132091-320x200.jpg" align ="left"></a><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12751919.md#1" target="_blank">新年多省现阴霾天气 官方甩锅爆竹网民不信</a><br></h3>中国新年期间，多地出现阴霾天气。北京市今年新年的空气污染程度更加严......<br><img align="bottom" src="https://raw.githubusercontent.com/yrsmsb310/www/master/t/ntdtv/time.gif">02月14日</td></tr>
 <tr><td width="742"><h3><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12751885.md#1" target="_blank"><img width="250" src="https://www.epochtimes.com/assets/themes/djy/images/djy_post_default_featured_image_320x200.jpg" align ="left"></a><a href="https://github.com/yrsmsb310/djy/blob/master/gb/21/2/14/n12751885.md#1" target="_blank">【翻墙必看】直播“辱包拜年祭”网民失联</a><br></h3>大纪元每天为读者梳理翻墙必看的文章：
 
